--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/move4klant"
         android:label="@string/app_name"
         android:name="com.example.jeff.move4kassa.library.RequestController"
         android:theme="@style/AppTheme"
@@ -24,7 +24,6 @@
             android:label="@string/title_activity_splashscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
